# Compose-Shape-Fitter

./: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/actions/setup-environment/: action.yml
.github/workflows/: ci.yml
app/: build.gradle.kts
app/src/androidTest/java/com/sarim/composeshapefittersampleapp/: DrawingScreenSelectedShapeTest.kt  DrawingScreenSettingsTest.kt  ExampleInstrumentedTest.kt  InstrumentationTestRunner.kt  TestApplication.kt  UiAutomatorExt.kt
app/src/androidTest/java/com/sarim/composeshapefittersampleapp/component/: CanvasComponentTest.kt
app/src/androidTest/java/com/sarim/composeshapefittersampleapp/presentation/: DrawingScreenSelectedShapeTest.kt  DrawingScreenSettingsTest.kt  DrawingScreenTest.kt
app/src/debug/java/com/sarim/composeshapefittersampleapp/presentation/: DrawingScreenPreviewType1.kt  DrawingScreenPreviewType2.kt  DrawingScreenPreviewType3.kt  DrawingScreenPreviewType4.kt  DrawingScreenPreviewType5.kt
app/src/debug/java/com/sarim/composeshapefittersampleapp/utils/: DataGenerationUtils.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/sarim/composeshapefittersampleapp/: MainActivity.kt  MainApplication.kt  MainInitializer.kt
app/src/main/java/com/sarim/composeshapefittersampleapp/di/: DrawingScreenModule.kt
app/src/main/java/com/sarim/composeshapefittersampleapp/presentation/: DrawingScreen.kt  DrawingScreenState.kt  DrawingScreenToViewModelEvents.kt  DrawingScreenUseCases.kt  DrawingScreenViewModel.kt
app/src/main/java/com/sarim/composeshapefittersampleapp/utils/: DispatcherProvider.kt  ListUtils.kt  Logger.kt  ObserveAsEvents.kt  OffsetParceler.kt  Resource.kt  ShapeGeneration.kt  SnackbarController.kt  UiText.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/sarim/composeshapefittersampleapp/: CoroutinesTestRule.kt  DrawingScreenTest.kt  ExampleUnitTest.kt  TestDispatchers.kt
app/src/test/java/com/sarim/composeshapefittersampleapp/data/: DataArchitectureTest.kt
app/src/test/java/com/sarim/composeshapefittersampleapp/domain/: DomainArchitectureTest.kt
app/src/test/java/com/sarim/composeshapefittersampleapp/presentation/: DrawingScreenStateTest.kt  DrawingScreenTest.kt  DrawingScreenViewModelInitTest.kt  DrawingScreenViewModelOnEventTest.kt  DrawingScreenViewModelTest.kt  PresentationArchitectureTest.kt
arch-unit-test/: build.gradle.kts
arch-unit-test/src/test/java/com/sarim/arch_unit_test/: DataArchitectureTest.kt  DomainArchitectureTest.kt  PresentationArchitectureTest.kt
build-logic/convention/: build.gradle.kts
build-logic/convention/src/main/java/com/sarim/convention/: GordonConventionPlugin.kt  JacocoConventionPlugin.kt
compose-shape-fiiter/: build.gradle.kts
compose-shape-fiiter/src/main/cpp/: CMakeLists.txt  native-lib.cpp
compose-shape-fiiter/src/main/java/com/sarim/compose_shape_fiiter/: Circle.kt  DrawingScreen.kt  Eclipse.kt  Hexagon.kt  Pentagon.kt  Rectangle.kt  SkewedEllipse.kt  Square.kt  Triangle.kt
compose-shape-fitter/: build.gradle.kts
compose-shape-fitter/src/main/cpp/: CMakeLists.txt  DirectEllipseFit.h  native-lib.cpp
compose-shape-fitter/src/main/cpp/ellipse-fit/: DirectEllipseFit.cpp  DirectEllipseFit.h
compose-shape-fitter/src/main/java/com/sarim/compose_shape_fitter/: Circle.kt  CircleShape.kt  DrawableShape.kt  DrawingScreen.kt  Ellipse.kt  EllipseShape.kt  Hexagon.kt  HexagonShape.kt  ObbShape.kt  OrientedBoundingBox.kt  Pentagon.kt  PentagonShape.kt  Rectangle.kt  RectangleShape.kt  SkewedEllipse.kt  SkewedEllipseShape.kt  Square.kt  SquareShape.kt  Triangle.kt  TriangleShape.kt
config/detekt/: detekt.yml
example-app/example-app-data/: build.gradle.kts
example-app/example-app-data/src/main/res/values/: strings.xml
example-app/example-app-di/: build.gradle.kts
example-app/example-app-domain/: build.gradle.kts
example-app/example-app-domain/src/main/res/values/: strings.xml
example-app/example-app-presentation/: build.gradle.kts
example-app/example-app-presentation/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
nav/: build.gradle.kts
nav/src/main/java/com/sarim/nav/: MainActivityScreen.kt
screenshot/screenshot-canvas-component/: build.gradle.kts
screenshot/screenshot-drawer-component/: build.gradle.kts
screenshot/screenshot-drawing-screen/screenshot-drawing-screen-type1/: build.gradle.kts
screenshot/screenshot-drawing-screen/screenshot-drawing-screen-type2/: build.gradle.kts
screenshot/screenshot-drawing-screen/screenshot-drawing-screen-type3/: build.gradle.kts
screenshot/screenshot-drawing-screen/screenshot-drawing-screen-type4/: build.gradle.kts
screenshot/screenshot-drawing-screen/screenshot-drawing-screen-type5/: build.gradle.kts
screenshot/screenshot-topbar-component/: build.gradle.kts
screenshot/screenshot-topbar-component/src/main/res/layout/: compose_view.xml
test-app/: build.gradle.kts
test-app/src/androidTest/java/com/sarim/test_app/: InstrumentationTestErrorRunner.kt  InstrumentationTestRunner.kt  TestApplication.kt  TestErrorApplication.kt  UiAutomatorExt.kt
test-app/src/androidTestError/java/com/sarim/test_app/: InstrumentationTestErrorRunner.kt  TestErrorApplication.kt
test-app/src/androidTestNormal/java/com/sarim/test_app/: InstrumentationTestNormalRunner.kt  TestApplication.kt  TestNormalApplication.kt
test-app/src/main/: AndroidManifest.xml
test-app/src/main/java/com/sarim/test_app/: TestActivity.kt
test-app/src/main/res/values/: themes.xml
utils/: build.gradle.kts
utils/src/main/java/com/sarim/utils/: CustomKoinLogger.kt  DispatcherProvider.kt  ErrorDataStore.kt  ListUtils.kt  Logger.kt  ObserveAsEvents.kt  OffsetPairParceler.kt  OffsetParceler.kt  Resource.kt  ShapeGeneration.kt  SnackbarController.kt  UiAutomatorExt.kt  UiText.kt
(+125 files in other folders)
